package com._520.decorator;

/**
 *  意大利咖啡
 */
public class Espresso extends Coffee {

    public Espresso(){
        setDes(" 意大利咖啡 ");
        setPrice(5.6f);
    }
}
