package com._520.decorator;

/**
 *  美式咖啡
 */
public class LongBlack extends Coffee {

    public LongBlack(){
        setDes("美式咖啡");
        setPrice(0.9f);
    }
}
